# depot-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  demo.yml
.github/workflows/: ci.yml
src/: app.rs  commands.rs  depot.rs  errors.rs  events.rs  keys.rs  main.rs  parser.rs  ui.rs
src/ui/: banner.rs  components.rs  views.rs
src/ui/components/: load_progress.rs  progress_bar.rs  select_menu.rs
src/ui/views/: catalog_view.rs  start_view.rs  update_view.rs
