[package]
name = "depot-rs"
version = "0.1.0"
description = "A TUI for managing your crates."
authors = ["pigeon <pigeon@quietpigeon.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.0", features = ["event-stream"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
thiserror = "2.0.12"
apply = "0.3.0"
nom = "8.0.0"
versions = "7.0.0"
url = "2.5.4"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
futures = "0.3.31"
tokio-util = "0.7.16"

[dev-dependencies]
pretty_assertions = "1.4.1"
