[package]
name = "depot-rs"
version = "0.1.1"
description = "A TUI for managing your crates."
authors = ["Moreen Ho <pigeon@quietpigeon.com>"]
license = "MIT"
edition = "2024"
readme = "README.md"
repository = "https://github.com/quietpigeon/depot-rs"
keywords = ["ratatui", "tui", "terminal", "crates"]

[[bin]]
name = "depot"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
thiserror = "2.0.12"
apply = "0.3.0"
nom = "8.0.0"
versions = "7.0.0"
throbber-widgets-tui = "0.9.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
futures = "0.3.31"

[dev-dependencies]
pretty_assertions = "1.4.1"
